# CV-A1

./: CMakeLists.txt
part1/: watermark  watermark.cpp
part2/: detect  detect.cpp  detected.txt
